--- a/net-check/etc/net-check.conf
+++ b/net-check/etc/net-check.conf
@@ -1,4 +1,14 @@
 # net-check configuration file
 
+# List of interfaces to restart if connectivity has failed
 INTERFACES="ppp0 eth0"
-GATEWAY=www.ee
+
+# Which host to test connectivity against
+GATEWAY=google.com
+
+# If ping fails _more_ times than the set limit, we restart the network.
+# When set to 5, the 6th consecutive failure will trigger a network restart.
+FAILURE_LIMIT=5
+
+# Default location for storing failure count between executions
+FAILLOG="/var/tmp/net-check-faillog.txt"
