DEV-1124 Supervisor for connectivity on PuG

--- a/net-check/DEBIAN/control
+++ b/net-check/DEBIAN/control
@@ -1,10 +1,10 @@
 Package: net-check
-Version: 0.3-1
+Version: 0.4-1
 Architecture: all
 Section: net
 Maintainer: Raido Pahtma <raido.pahtma@ttu.ee>
 Homepage: https://github.com/proactivity-lab/net-check
-Depends: bash
+Depends: bash connman
 Priority: optional
 Description: Network connectivity checking and recovery script
  This script periodically checks network connectivity and
