--- a/net-check/etc/net-check.conf
+++ b/net-check/etc/net-check.conf
@@ -1,10 +1,13 @@
 # net-check configuration file
 
 # List of interfaces to restart if connectivity has failed
-INTERFACES="ppp0 eth0"
+INTERFACES="ppp0 eth1"
 
-# Which host to test connectivity against
-GATEWAY=google.com
+# Which host to test connectivity against. Note that google and some
+# other well-known services are blocked in China.
+# We use a DNS name because it verifies both the DNS configuration and
+# the connection to public Internet.
+GATEWAY="cloudflare.com"
 
 # If ping fails _more_ times than the set limit, we restart the network.
 # When set to 5, the 6th consecutive failure will trigger a network restart.
