DEV-1124 Fix typo in dependencies

--- a/net-check/DEBIAN/control
+++ b/net-check/DEBIAN/control
@@ -4,7 +4,7 @@ Architecture: all
 Section: net
 Maintainer: Raido Pahtma <raido.pahtma@ttu.ee>
 Homepage: https://github.com/proactivity-lab/net-check
-Depends: bash connman
+Depends: bash, connman
 Priority: optional
 Description: Network connectivity checking and recovery script
  This script periodically checks network connectivity and
