--- a/net-check/etc/net-check.conf
+++ b/net-check/etc/net-check.conf
@@ -15,3 +15,6 @@ FAILURE_LIMIT=5
 
 # Default location for storing failure count between executions
 FAILLOG="/var/tmp/net-check-faillog.txt"
+
+# Set to empty to disable error indicator LED
+ERROR_INDICATOR_LED="/dev/led_red"
